src/snapshots/csvsql__table__tests__draw_table-12.snap
---
source: src/table.rs
expression: terminal.backend()
---
"    sale made     delivered at  price   delivery cos tax percentag customer id  "
"    2024-10-18 21 2024-10-20 19 558.50  17.21        4.6055        -5783077230║9"
"    2024-09-24 13 2024-10-30 22 7.68    0.02         6.1023        -2171927956║6"
"    2024-07-12 02 2024-09-13 23 375.27  0.80         2.9127        72928678801║7"
"    2024-08-18 07 2024-09-11 10 361.02  2.19         16.0907       81811150303║5"
"    2024-09-12 15 2024-10-23 13 37.96   0.98         10.9823       72928678801║7"
"    2024-05-15 15 2024-09-29 10 342.00  0.21         19.9554       78326745976║0"
"    2024-05-20 20 2024-07-31 19 10.58   0.32         7.3759        81811150303█5"
"    2024-06-06 13 2024-07-07 07 490.51  2.97         16.4209       -5783077230█9"
"    2024-07-22 21 2024-09-29 14 419.80  12.70        0.7270        78326745976█0"
"    2024-02-21 08 2024-03-16 13 208.59  3.28         6.9612        -1531692708█6"
"    2024-03-03 13 2024-06-14 13 548.39  1.59         9.0752        -7997066339█0"
"    2024-09-10 22 2024-09-25 09 543.59  12.11        12.4391       -1531692708║6"
"    2024-02-24 16 2024-10-16 08 495.54  2.94         2.8724        -2357055618║1"
"    2024-01-28 21 2024-05-04 01 303.64  1.18         17.1970       72928678801║7"
"    2024-08-09 13 2024-09-05 02 75.52   1.51         14.5107       -7997066339║0"
"    2024-07-21 13               511.86  1.92         3.0063        -1531692708║6"
"    2024-03-14 16               177.80  2.00         5.5723        56672045202║3"
"    2024-01-17 05 2024-03-20 19 42.48   0.18         4.1627        -799706633980"
"                    (Esc) quit | (↑) move up | (↓) move down                    "
