src/snapshots/csvsql__table__tests__draw_table-14.snap
---
source: src/table.rs
expression: terminal.backend()
---
"    sale made     delivered at  price   delivery cos tax percentag customer id  "
"    2024-03-14 16               177.80  2.00         5.5723        56672045202║3"
"    2024-01-17 05 2024-03-20 19 42.48   0.18         4.1627        -7997066339║0"
"    2024-09-02 23 2024-09-28 07 505.51  15.27        8.5395        81811150303║5"
"    2024-10-28 22 2024-10-29 20 527.85  8.38         18.5045       -2357055618║1"
"    2024-08-31 03 2024-09-24 14 172.03  2.61         16.5524       81811150303║5"
"    2024-05-26 07 2024-10-09 20 157.71  1.97         2.7582        -7997066339║0"
"    2024-05-31 11 2024-07-19 04 128.38  4.03         4.4871        -2171927956█6"
"    2024-07-20 11 2024-09-27 10 490.34  10.85        1.9361        -5783077230█9"
"    2024-05-26 16 2024-07-12 23 438.74  8.94         1.9910        -5783077230█9"
"    2024-08-02 20 2024-08-08 22 313.58  0.48         18.4541       -5783077230█9"
"    2024-06-05 20               524.56  8.39         11.6182       -2357055618█1"
"    2024-07-28 10               150.86  2.70         0.8180        56672045202║3"
"    2024-02-01 14 2024-09-25 22 588.86  0.88         10.7028       72928678801║7"
"    2024-02-24 10 2024-06-26 21 496.23  5.80         14.4132       -2357055618║1"
"    2024-06-05 18               57.11   0.84         9.8257        -2357055618║1"
"    2024-08-18 23 2024-09-07 01 234.37  7.80         9.7815        -8862786196║9"
"    2024-01-18 06 2024-08-28 23 253.65  6.08         19.8160       56672045202║3"
"    2024-01-25 18 2024-06-30 08 392.10  2.27         10.6329       8181115030395"
"                    (Esc) quit | (↑) move up | (↓) move down                    "
